# insikt

./: .gitignore  CLAUDE.md  README.md  SPEC.md  install.sh  pyproject.toml
.github/workflows/: release.yml
insikt/: __init__.py  cli.py  configure.py  history.py  mcp_server.py  model.py  profiles.py  redact.py  server.py  state.py  store.py  timewindow.py  views.py  webterm.py
insikt/collectors/: __init__.py  _http.py  base.py  claude_code.py  hermes.py  homeassistant.py  honcho.py  openclaw.py  system.py
insikt/data/: advisory_feed.json
insikt/hygiene/: __init__.py  engine.py  rules.py
insikt/report/: __init__.py  builder.py  dashboard.py  template.py
tests/: conftest.py  test_base.py  test_claude_code.py  test_cli.py  test_collectors.py  test_configure.py  test_dashboard.py  test_hermes_build.py  test_history.py  test_homeassistant.py  test_honcho.py  test_hygiene.py  test_mcp.py  test_mcp_server.py  test_report.py  test_review_fixes.py  test_server.py  test_state.py  test_store.py  test_system.py  test_timewindow.py  test_views.py  test_webterm.py
tests/fixtures/claude_code_home/: .credentials.json  mcp-needs-auth-cache.json  settings.json  settings.local.json
tests/fixtures/claude_code_home/agents/: docker-debug.md
tests/fixtures/claude_code_home/commands/: audit.md  danger.md
tests/fixtures/claude_code_home/projects/-Users-demo-repo/: session1.jsonl
tests/fixtures/hermes_home/: .env  channel_directory.json  config.yaml  honcho.json
tests/fixtures/hermes_home/cron/: jobs.json
tests/fixtures/hermes_home/mcp/: config.json
tests/fixtures/hermes_home/memories/: MEMORY.md
tests/fixtures/hermes_home/sessions/: 2026-06-14.jsonl  sessions.json
tests/fixtures/hermes_home/skills/: .bundled_manifest  .usage.json  backup-helper.md  pi-temp-watch.md  summarize.md
tests/fixtures/openclaw_home/: openclaw.json  usage.jsonl
(+9 files in other folders)
